Fix onboarding container overflow

--- a/src/ui/onboarding/OnboardingContainer.scss
+++ b/src/ui/onboarding/OnboardingContainer.scss
@@ -1,5 +1,5 @@
 :local(.onboardingContainer) {
-  position: fixed;
+  position: absolute;
   display: flex;
   left: 0;
   top: 0;
